@@ -1,8 +1,9 @@
 v1.5
 2015/09/27
 - 增加 $.vmodel.get() 第三個參數為回調函數 (callback)
-- 增加視覺化，綁定在實際跟元素的自訂屬性
-- 增加 $.vmodel.struct() 可以取得結構化資訊
+- 增加視覺化屬性，綁定在實際跟元素的自訂屬性
+- 視覺化屬性，可以指定當根選擇器為 window 與 document 的時候
+- 增加 $.vmodel.history() 可以取得視覺化屬性資訊
 - 擴增內部屬性 vname
 
 
